EDU-1287 Fix wrongly positioned avatar on mobile (when user name is longer)

--- a/src/components/pages/dashboard.less
+++ b/src/components/pages/dashboard.less
@@ -25,6 +25,7 @@
     gap: 10px;
     grid-auto-flow: row;
     align-items: center;
+    justify-items: center;
     justify-content: center;
   }
 }
